Fixed overflow again

--- a/css/main.css
+++ b/css/main.css
@@ -4614,5 +4614,7 @@ height: 0;
 }
 
 .nicknames {
+  overflow: hidden;
+  display: block;
   text-overflow: ellipsis;
 }
